<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:background="@android:color/holo_blue_bright">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="false"
            android:cropToPadding="false"
            android:src="@mipmap/ic_launcher_foreground" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="24dp"
            android:text="[Text]"
            android:id="@+id/name_bar"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ttl_bar_1"
            android:paddingBottom="24dp"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_link_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:background="@drawable/button_rounded"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_txt_1"
                />

            <Button
                android:id="@+id/btn_link_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:background="@drawable/button_rounded"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_txt_3" />

            <Button
                android:id="@+id/btn_link_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:background="@drawable/button_rounded"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/menu_login" />

            <Button
                android:id="@+id/btn_link_4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:background="@drawable/button_rounded"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_txt_4" />

            <Button
                android:id="@+id/btn_link_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="false"
                android:background="@drawable/button_rounded"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:text="@string/btn_txt_2" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>