<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="10">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@android:color/holo_blue_light">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:text="@string/panel_msg"
            android:textColor="@android:color/white"/>

    </LinearLayout>

    <!-- A RecyclerView with some commonly used attributes -->

    <android.support.v7.widget.RecyclerView
        android:id="@+id/vote_panel_recycler"
        android:layout_width="match_parent"
        android:layout_weight="5"
        android:layout_height="0dp"
        android:scrollbars="vertical"
        android:background="@android:color/holo_blue_bright" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:weightSum="10"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="7"
            android:orientation="vertical"
            android:layout_height="fill_parent"
            android:background="@android:color/holo_red_light">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vote_instruction"
                android:textColor="@android:color/white"
                android:padding="10dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/voted_cand_view"
                android:textColor="@android:color/white"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:text=""/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_weight="3"
            android:layout_height="80dp"
            android:orientation="horizontal"
            android:weightSum="10"
            android:background="@android:color/holo_blue_light">

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn_vote_back"
                android:text="@string/btn_back"
                android:layout_weight="5"/>

            <Button
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:id="@+id/btn_vote"
                android:text="Vote"
                android:layout_weight="5"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>
